Fix some images getting stretched

--- a/trifle/data/ui/feedview/style.css
+++ b/trifle/data/ui/feedview/style.css
@@ -134,6 +134,7 @@ header hr {
 
 #trifle_content img {
     max-width: 100%;
+    height: auto;
 }
 
 #trifle_content a:link {
